Fixed validateCity. Added btn text css for dark mode

--- a/sprint1/styles.css
+++ b/sprint1/styles.css
@@ -17,6 +17,10 @@ body.dark-mode{
     .navbar{
         background-color: #222021;
     }
+
+    .btn{
+        color: #bbb;
+    }
 }
 
 #bio-container p {
